@@ -3,6 +3,7 @@ Changelog
 
 4.10-dev - (unreleased)
 -----------------------
+ * Bug fix: Set filename for image fields where missing [szabozo0 #4746]
 
 4.9 - (2011-11-25)
 ------------------
